tests/negative/wrong_arg_type.sans
// expect-error: argument
foo(a:I b:I c:I) I { a + b + c }
main() I {
  foo(1)
}
